--- a/src/content/ideas/2025/gpu-retro/index.mdx
+++ b/src/content/ideas/2025/gpu-retro/index.mdx
@@ -86,6 +86,18 @@ Flynn's taxonomy gives us a useful vocabulary here:
 
 GPUs implement SPMD through the **SIMT** (Single Instruction, Multiple Threads) execution model. A group of 32 threads called a **warp** executes together in lockstep. As long as all 32 threads follow the same code path, the hardware is fully utilized. When they diverge—some take the `if` branch and some take the `else`—the hardware has to serialize the execution, running the `if` threads while masking the `else` threads, then vice versa. This **branch divergence** is one of the central costs to manage when writing GPU code.
 
+### Parallel Decomposition Patterns
+
+Before CUDA details, one question helps: **what exactly are we parallelizing?** In practice, GPU workloads usually fall into a few recurring patterns:
+
+- **Data decomposition**: apply the same operation to many independent elements (vector add, matrix multiply, attention tiles). This is the dominant GPU pattern.
+- **Task decomposition**: split work into stages with different responsibilities (for example, preprocessing, compute, postprocessing) and run those stages separately.
+- **Pipeline decomposition**: overlap transfer and compute so different chunks are in different stages at the same time.
+
+Most high-performance kernels in this article are data decomposition in an SPMD style: many threads run the same kernel body on different indices. Tiled GEMM, bitonic sort phases, and FlashAttention block loops all fit this shape.
+
+A useful coordination mental model is local vs global communication. Inside a block, threads cooperate through shared memory and barriers (fast, local coordination). Across blocks, coordination is usually explicit via global memory and kernel boundaries (slower, but scalable). This distinction is why some algorithms fit cleanly into one kernel while others naturally become multi-kernel pipelines.
+
 ### The CUDA Programming Model
 
 CUDA (Compute Unified Device Architecture) is NVIDIA's programming model for GPUs. It extends C/C++ with a set of abstractions that map directly onto the GPU hardware.
@@ -145,12 +157,10 @@ Understanding memory is the key to writing fast GPU code. GPUs have a rich memor
 
 The pattern of "load from global into shared, compute, write back to global" is the foundation of most high-performance CUDA kernels. The tiled matrix multiplication in Project 1 is the canonical example of this pattern.
 
-<details>
-  <summary>For more details, see the CUDA Programming Guide sections 1–3, which cover:</summary>
-  - The full thread hierarchy (threads, blocks, grids) and how it maps to hardware.
-  - Memory model semantics and synchronization (`__syncthreads()`).
-  - How to choose block dimensions and grid dimensions for a given problem.
-</details>
+Related CUDA Programming Guide sections (1-3) also cover:
+- The full thread hierarchy (threads, blocks, grids) and how it maps to hardware.
+- Memory model semantics and synchronization (`__syncthreads()`).
+- How to choose block dimensions and grid dimensions for a given problem.
 
 ## GPU Architecture
 
@@ -212,13 +222,11 @@ For global memory, the key performance concern is **coalescing**. When threads i
 
 The practical rule: adjacent threads should access adjacent memory locations. This is why the "row-major thread indexing" pattern is the default in most CUDA kernels.
 
-<details>
-  <summary>For more details, see Module 4, which covers:</summary>
-  - The full SM microarchitecture, including the register file design and shared memory organization.
-  - How the GPU pipeline stages map onto the warp scheduling loop.
-  - Occupancy analysis and the limits imposed by register count, shared memory usage, and block size.
-  - DRAM architecture (GDDR, HBM) and its impact on memory bandwidth.
-</details>
+Module 4 of the course also covered:
+- The full SM microarchitecture, including the register file design and shared memory organization.
+- How the GPU pipeline stages map onto the warp scheduling loop.
+- Occupancy analysis and the limits imposed by register count, shared memory usage, and block size.
+- DRAM architecture (GDDR, HBM) and its impact on memory bandwidth.
 
 ## Architecture Optimizations
 
@@ -237,12 +245,10 @@ Modern GPUs handle this through the **IPDOM reconvergence stack** (or its succes
 
 **Predicated execution** is the optimization for small divergent branches. Instead of taking a branch at all, the compiler emits the instructions for both sides with predicate registers. Threads that shouldn't execute a predicated instruction have it masked out—no branch, no reconvergence overhead. The cost is executing both sides of the branch (discarding results for threads where the predicate is false), which is only worthwhile when the branch body is very short.
 
-<details>
-  <summary>For more details, see Module 6, which covers:</summary>
-  - Dynamic warp formation: the concept of regrouping threads from different warps that happen to be at the same PC to form a new full warp (a research technique used in some architectures).
-  - Register file virtualization for handling the case where the logical register file exceeds the physical one.
-  - More advanced reconvergence schemes and their interaction with the thread scheduler.
-</details>
+Module 6 of the course also covered:
+- Dynamic warp formation: the concept of regrouping threads from different warps that happen to be at the same PC to form a new full warp (a research technique used in some architectures).
+- Register file virtualization for handling the case where the logical register file exceeds the physical one.
+- More advanced reconvergence schemes and their interaction with the thread scheduler.
 
 ### Virtual Memory and TLBs at GPU Scale
 
@@ -252,12 +258,10 @@ The challenge is **TLB reach**. With thousands of concurrent threads accessing l
 
 **Unified Virtual Addressing (UVA)** and **cudaMallocManaged** take this further by giving the CPU and GPU a shared virtual address space. Pointers are valid on both sides; the driver and hardware manage migrating pages to where they're needed. This is enormously convenient for programmers but requires careful thought about access patterns to avoid excessive page migration overhead.
 
-<details>
-  <summary>For more details, see Module 7, which covers:</summary>
-  - The four-level TLB hierarchy in modern NVIDIA GPUs and the cost of TLB misses at scale.
-  - How page faults are handled on the GPU (the hardware must halt the faulting warp, issue a page fault exception, and wait for the OS to resolve it).
-  - Prefetching strategies for Unified Memory to reduce page fault overhead.
-</details>
+Module 7 of the course also covered:
+- The four-level TLB hierarchy in modern NVIDIA GPUs and the cost of TLB misses at scale.
+- How page faults are handled on the GPU (the hardware must halt the faulting warp, issue a page fault exception, and wait for the OS to resolve it).
+- Prefetching strategies for Unified Memory to reduce page fault overhead.
 
 ### Warp Scheduling Policies
 
@@ -291,6 +295,16 @@ Real GPU hardware gives you performance counters and profilers, but they only te
 
 This kind of analysis is how GPU architects design and validate new hardware before it's built. Academic researchers use simulators to prototype and evaluate new architectural ideas. Projects 3 and 4 used **Macsim**, a trace-driven cycle-level simulator developed at Georgia Tech's HPArch lab.
 
+A useful way to categorize simulator choices:
+
+| Method | Accuracy | Runtime cost | Best use case |
+|---|---|---|---|
+| Cycle-level (trace or execution-driven) | High | High | Microarchitectural policy work (warp schedulers, cache behavior, buffer stalls). |
+| Event-driven / queue-based | Medium-High | Medium | Pipeline studies where stage interactions matter but cycle-by-cycle replay can be abstracted. |
+| Sampling / interval-based | Medium | Low | Fast design-space exploration over many configurations. |
+
+Macsim sits in the first bucket. The queue-based view is still central: requests and warps move through fetch/issue/memory/execution queues with per-stage latency and width constraints, and those queue interactions produce the stall behavior seen in final metrics.
+
 <Figure
   src={gpuSimImg}
   alt="GPU simulation framework"
@@ -314,13 +328,11 @@ Before diving into simulation, it's worth having a mental model for where a GPU 
 
 Tiled matrix multiplication (Project 1) is a classic example of using shared memory to increase arithmetic intensity and push a workload from memory-bound to compute-bound. The FlashAttention algorithm (Extra Project) uses the same principle at much larger scale.
 
-<details>
-  <summary>For more details, see Module 8, which covers:</summary>
-  - Cycle-level simulation methodology: how to model pipeline stages, caches, and memory controllers.
-  - Trace-driven vs. execution-driven simulation and their respective trade-offs.
-  - Event-driven simulation and queue-based modeling.
-  - How to validate a simulator against real hardware results.
-</details>
+Module 8 of the course also covered:
+- Cycle-level simulation methodology: how to model pipeline stages, caches, and memory controllers.
+- Trace-driven vs. execution-driven simulation and their respective trade-offs.
+- Event-driven simulation and queue-based modeling.
+- How to validate a simulator against real hardware results.
 
 ## Multi-GPU Computing
 
@@ -339,13 +351,11 @@ At some point, a single GPU isn't enough. Modern ML training runs span hundreds 
 
 The software side involves **NCCL** (NVIDIA Collective Communications Library), which implements the standard collective operations (broadcast, reduce, all-reduce, etc.) efficiently across GPU clusters.
 
-<details>
-  <summary>For more details, see Module 9, which covers:</summary>
-  - The hardware topology of multi-GPU systems, including PCIe switches, NVLink bridges, and NVSwitch fabrics.
-  - NUMA memory effects when GPUs on different sockets access each other's memory.
-  - Multi-Process Service (MPS) for sharing a GPU across multiple processes.
-  - Thread block scheduling across multiple GPUs.
-</details>
+Module 9 of the course also covered:
+- The hardware topology of multi-GPU systems, including PCIe switches, NVLink bridges, and NVSwitch fabrics.
+- NUMA memory effects when GPUs on different sockets access each other's memory.
+- Multi-Process Service (MPS) for sharing a GPU across multiple processes.
+- Thread block scheduling across multiple GPUs.
 
 ## Compiler Analysis for GPUs
 
@@ -366,6 +376,8 @@ CUDA code goes through a multi-stage compilation process before running on hardw
 
 This two-stage design is what lets CUDA programs run on future GPU architectures without recompilation: the PTX can be recompiled by the driver at runtime.
 
+This post is CUDA-centric because that's what the projects used, but the course framing also compares CUDA with OpenCL as a portability baseline. CUDA optimizes for NVIDIA-specific toolchains and libraries; OpenCL emphasizes cross-vendor portability with a more generic runtime model. The tradeoff is usually convenience and peak-performance ecosystem depth (CUDA) versus portability and vendor neutrality (OpenCL).
+
 ### Dataflow Analysis and Divergence Detection
 
 The compiler needs to understand which branches will be divergent (executed differently by different threads in a warp) and which won't. A branch that depends on thread ID is almost certainly divergent. A branch that depends only on uniform values (the same across all threads) is safe.
@@ -381,13 +393,11 @@ This analysis is a form of **dataflow analysis**—specifically, tracking which 
 
 The analysis works on the **Control Flow Graph (CFG)** of the program, computing def-use chains and propagating taint through the use-def relationships. For programs with loops, this becomes an iterative fixed-point computation—you keep propagating taint until nothing changes. Module 11 covers the details of liveness analysis and dataflow equations, and Project 5 involved implementing branch divergence detection in exactly this way.
 
-<details>
-  <summary>For more details, see Modules 10 and 11, which cover:</summary>
-  - The LLVM IR and how CUDA maps onto it.
-  - Single Static Assignment (SSA) form and why compilers prefer it for analysis.
-  - Reaching definitions, liveness analysis, and their applications to register allocation.
-  - The connection between GPU divergence analysis and classic compiler dataflow techniques.
-</details>
+Modules 10 and 11 of the course also covered:
+- The LLVM IR and how CUDA maps onto it.
+- Single Static Assignment (SSA) form and why compilers prefer it for analysis.
+- Reaching definitions, liveness analysis, and their applications to register allocation.
+- The connection between GPU divergence analysis and classic compiler dataflow techniques.
 
 ## ML Acceleration on GPUs
 
@@ -419,13 +429,15 @@ The catch: tensor cores operate on reduced-precision inputs, typically FP16 (hal
 
 The HMMA (Half-precision Matrix Multiply-Accumulate) instruction that tensor cores expose is accessed in CUDA via the `wmma` API or through libraries like cuBLAS. The compiler can also automatically use tensor cores when it detects compatible GEMM patterns.
 
-<details>
-  <summary>For more details, see Module 12, which covers:</summary>
-  - The full landscape of DNN operations: elementwise, reduction, GEMM, and specialized ops.
-  - Arithmetic intensity analysis for different neural network layer types and batch sizes.
-  - Quantization: going below FP16 to INT8 or even INT4 for inference.
-  - Sparse matrix operations and their (limited) effectiveness on current hardware.
-</details>
+Quantization extends the same throughput logic. Moving from FP16/BF16 to INT8 or FP8 reduces bytes moved per operation, which can shift workloads toward higher effective arithmetic intensity and larger feasible batch sizes at fixed memory bandwidth. But quantization is not free: scale factors, dequant/requant steps, and outlier handling can add overhead, and numerically sensitive paths (normalization, reductions, logits) often still need higher-precision accumulators.
+
+Sparse operations add another tradeoff layer. If sparsity is structured enough for hardware support, you can reduce compute and memory traffic substantially. If sparsity is unstructured, metadata overhead and irregular access can erase the theoretical gains. That is why sparse acceleration is highly workload- and format-dependent in real systems.
+
+Module 12 of the course also covered:
+- The full landscape of DNN operations: elementwise, reduction, GEMM, and specialized ops.
+- Arithmetic intensity analysis for different neural network layer types and batch sizes.
+- Quantization: going below FP16 to INT8 or even INT4 for inference.
+- Sparse matrix operations and their (limited) effectiveness on current hardware.
 
 ## Course Overview
 
